[package]
name = "solana_axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.18.12"
solana-program = "1.18.12"
spl-token = "4.0.0"
bs58 = "0.5"
base64 = "0.21"
hyper = "0.14"
